# sip

./: .gitignore  README.md  pyproject.toml
a1/: __init__.py  const.py  contrast.py  filtering.py  histogram.py  main.py  plotting.py  reverb.py
a2/: contrast.py  reverb.py
a3/: const.py  fourier-transform.py
a5/: blob_detection.py  const.py  feature_detector.py  inverse_filtering.py  plotting.py  scale_space.py  spectograms.py
a6/: const.py  njet.py  pca.py  plotting.py  pyramid_plots.py  text_reader.py  transform.py
a7/: bin_morph.py  canny.py  coin.py  const.py  hough.py  open_close.py  plotting.py  segmentation.py  transform.py
a8/: const.py  keras_model.py  plotting.py  procrustes.py  run_keras.py  run_procrustes.py  segmentation.py  transformations.py
a8/tex/: main.tex  main.toc
a8_julian/: plotting.py  procrustes.py  run_keras.py  run_procrustes.py  transformations.py
a8_julian/tex/: sec1.tex  sec2.tex  sec3.tex
a8_oskar/: bioscan.py  const.py  plotting.py  trans_img.py
julian-a4/: fft_conv.py  plotting.py  threshold.py
julian-a4/tex/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  sec1.tex  sec2.tex  sec3.tex  sec4.tex
oskar-a4/: const.py  gaussian.py  segmentation.py
